--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.31.0",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.8",
+    "@editorjs/paragraph": "^2.11.7",
+    "@tiptap/extension-bubble-menu": "^3.7.2",
+    "@tiptap/extension-code-block-lowlight": "^3.7.2",
+    "@tiptap/extension-floating-menu": "^3.7.2",
+    "@tiptap/html": "^3.7.2",
+    "@tiptap/pm": "^3.7.2",
+    "@tiptap/react": "^3.7.2",
+    "@tiptap/starter-kit": "^3.7.2",
+    "firebase": "^12.4.0",
+    "lowlight": "^3.3.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
