--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "firebase": "^12.4.0",
+    "lucide-react": "^0.552.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
