--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "firebase": "^12.4.0",
+    "isomorphic-dompurify": "^2.32.0",
     "lucide-react": "^0.552.0",
     "next": "15.5.5",
     "react": "19.1.0",
@@ -20,7 +21,8 @@
     "react-hot-toast": "^2.6.0",
     "react-select": "^5.10.2",
     "react-syntax-highlighter": "^15.6.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
