--- a/package.json
+++ b/package.json
@@ -4,16 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@monaco-editor/react": "^4.7.0",
+    "canvas-confetti": "^1.9.4",
+    "driver.js": "^1.4.0",
+    "firebase": "^12.4.0",
+    "isomorphic-dompurify": "^2.32.0",
+    "lucide-react": "^0.552.0",
+    "next": "15.5.7",
+    "next-pwa": "^5.6.0",
+    "prismjs": "^1.30.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
+    "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
+    "react-simple-code-editor": "^0.14.1",
+    "react-syntax-highlighter": "^15.6.6",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
